--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Newspoint</title>
   </head>
-  <body></body>
+  <body>
+    <div
+      id="preview-container"
+      style="overflow-y: scroll; max-height: 90vh"
+    ></div>
+  </body>
 </html>
