adds full story container and titles to both

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Newspoint</title>
   </head>
   <body>
-    <div
-      id="preview-container"
-      style="overflow-y: scroll; max-height: 90vh"
-    ></div>
+    <div id="preview-container" style="overflow-y: scroll; max-height: 90vh">
+      <h3 class="story-title" id="full-story-title"></h3>
+    </div>
+    <div id="full-story-container">
+      <h2 class="story-title" id="full-story-title"></h2>
+    </div>
   </body>
 </html>
