--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -6,5 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Model Files -->
+    <script src="./src/stories.js"></script>
+    <script src="./src/story.js"></script>
+
+    <!-- Spec Files -->
+    <script src="./spec/storiesSpec.js"></script>
+    <script src="./spec/storySpec.js"></script>
+  </body>
 </html>
