adds basic temporary story structure in index

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   </head>
   <body>
     <div id="preview-container" style="overflow-y: scroll; max-height: 90vh">
-      <h3 class="story-title" id="full-story-title"></h3>
+      <h3 class="story-title" id="preview-story-title"></h3>
+      <p class="story-body" id="preview-story-body"></p>
+      <p class="story-image" id="preview-story-image"></p>
+      <p class="story-source" id="preview-story-source"></p>
     </div>
     <div id="full-story-container">
-      <h2 class="story-title" id="full-story-title"></h2>
+      <h3 class="story-title" id="full-story-title"></h3>
+      <p class="story-body" id="full-story-body"></p>
+      <p class="story-image" id="full-story-image"></p>
+      <p class="story-source" id="full-story-source"></p>
     </div>
   </body>
 </html>
