--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Newspoint - TESTING</title>
   </head>
   <body>
+    <h1>ENTER JS CONSOLE TO SEE TEST INFO</h1>
+
     <!-- Model Files -->
     <script src="./src/stories.js"></script>
     <script src="./src/story.js"></script>
