adds script tags for spec helpers to SpecRunner

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,5 +16,7 @@
     <!-- Spec Files -->
     <script src="./spec/storiesSpec.js"></script>
     <script src="./spec/storySpec.js"></script>
+    <script src="./spec/helpers/matchers.js"></script>
+    <script src="./spec/helpers/constructers.js"></script>
   </body>
 </html>
