adds script tags fin index.html

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
       <p class="story-image" id="full-story-image"></p>
       <p class="story-source" id="full-story-source"></p>
     </div>
+
+    <script src="./src/stories.js"></script>
+    <script src="./src/story.js"></script>
+    <script src="./src/interface.js"></script>
+    <script src="./src/client.js"></script>
   </body>
 </html>
