loads first story into 'full-story' tags on page load

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     <div id="full-story-container">
       <h3 class="story-title" id="full-story-title"></h3>
+      <div class="image-div">// Image gets inserted here in DOM</div>
       <p class="story-body" id="full-story-body"></p>
-      <p class="story-image" id="full-story-image"></p>
       <p class="story-source" id="full-story-source"></p>
     </div>
 
